--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "3. Foundry Simple Storage/lib/forge-std"]
 	path = 3. Foundry Simple Storage/lib/forge-std
 	url = https://github.com/foundry-rs/forge-std
+[submodule "4. Foundry Fund me/lib/forge-std"]
+	path = 4. Foundry Fund me/lib/forge-std
+	url = https://github.com/foundry-rs/forge-std
