--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,9 @@
 [submodule "4. Foundry Fund me/lib/forge-std"]
 	path = 4. Foundry Fund me/lib/forge-std
 	url = https://github.com/foundry-rs/forge-std
+[submodule "4. Foundry Fund me/lib/chainlink-brownie-contracts"]
+	path = 4. Foundry Fund me/lib/chainlink-brownie-contracts
+	url = https://github.com/smartcontractkit/chainlink-brownie-contracts
+[submodule "4. Foundry Fund me/lib/foundry-devops"]
+	path = 4. Foundry Fund me/lib/foundry-devops
+	url = https://github.com/ChainAccelOrg/foundry-devops
